Adding multiple endpoints configuration as baseURI

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -13,4 +13,26 @@ connection.timeout=5000
 read.timeout=10000
 
 # Test data paths
-test.data.path=src/test/resources/testdata 
+test.data.path=src/test/resources/testdata
+
+# Service-specific configurations
+# JSONPlaceholder service
+service.jsonplaceholder.baseurl=https://jsonplaceholder.typicode.com
+service.jsonplaceholder.timeout=10000
+
+# User service
+service.user.baseurl=https://user-api.example.com
+service.user.auth.token=user-service-token
+service.user.timeout=8000
+
+# Payment service
+service.payment.baseurl=https://payment-api.example.com
+service.payment.auth.token=payment-service-token
+service.payment.auth.username=payment-user
+service.payment.auth.password=payment-pass
+service.payment.timeout=15000
+
+# Notification service
+service.notification.baseurl=https://notification-api.example.com
+service.notification.auth.token=notification-service-token
+service.notification.timeout=5000 
